2005-01-28 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmUtil.cxx : compilation fix on Win32
   * src/gdcmUtil.[h|cxx] : Set the default GDCM UID in a static constant
     variable, to be easy found. Add methods to change the default UID.
     Amelioration of the CreateUniqueUID to use the correct default UID.
   * src/gdcmFile.cxx : correct use of the CreateUniqueUID method to create
     a new file

2005-01-28 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/TestVR.cxx : fix memory leaks

2005-01-27 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Rewrite the base 256 to base 10 conversion, using string operation only.
	 This allos us to get rid of the problematic 64bits integer type (does not
	 alwyas exist on target platform).

2005-01-27 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * Add construct and destructor to class gdcm::Debug to close the debug file
          automatically
   * Don't let uset to open twice the same file
   * gdcm has now an official UID prefix,
          supplied by http://www.medicalconnections.co.uk
          1.2.826.0.1.3680043.2.1143
          (Thx to Mathieu for providing URL)
   * Add a forty-entries private Dicom Dictionary (Philips MR Intera)
         to be able to perform some more tests
   * gdcm::ContentEntry : Contructors and Destructor are now protected,
         in order to be sure no user will try to use them.
         (at user level, only the children classes are meaningfull)

2005-01-26 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * move RLEInfo & JPEGInfo from Document to File

2005-01-26 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * FIX : remove so many friend between classes

2005-01-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocEntrySet.cxx : Bug fix when getting the value
   * src/gdcmContentEntry.[h|cxx], gdcmValEntry.cxx : amelioration of code

2005-01-25 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>